# dvs

./: .gitignore  .gitmodules  Pipeline  Projection  README.md  TODO  add_new_gui_element_instructions  adding_elements_demo.patch  build_and_deploy_notes  building_macos_app  change_enum_names.py  compile_for_mac_sdks  compile_libpng  create_series_file.py  demo_creation_notes  format_with_clang_format  freetype_build  gpt_prompt_vector  license  marketing  multithreading_notes  name_suggestions  notes  planering  press_release  test_project_json.py  wx_make_commands  wx_stripped_configure  xcode_build
cpp/: .clang-format  CMakeLists.txt
cpp/applications/advanced_tests_c/: code.c
cpp/applications/basic_tests_c/: CMakeLists.txt
cpp/applications/basic_tests_cpp/: CMakeLists.txt
cpp/applications/basic_udp/: CMakeLists.txt  another_file.cpp  attributes.h  basic_message.h  data_containers.h  dvs.h  enumerations.h  function_header.h  low_level_com.h  main_client.cpp  main_server.cpp  plot_attributes.h
cpp/applications/improvements/: CMakeLists.txt  axes_renderer.cpp  axes_renderer.h  gl_canvas.cpp  gl_canvas.h  gl_canvas_misc.cpp  grid_numbers.cpp  grid_numbers.h  main_window.cpp  plot_box_grid.cpp  plot_box_grid.h  plot_box_silhouette.cpp  plot_box_walls.cpp  plot_box_walls.h  text_rendering.cpp  text_rendering.h  text_rendering_new.cpp  text_rendering_new.h  vbo_wrapper.cpp  vbo_wrapper.h  vertex_data.cpp  vertex_data.h
cpp/applications/shader_app/: CMakeLists.txt  gl_canvas.cpp  gl_canvas.h  gl_canvas_misc.cpp  main_window.cpp  main_window.h  vertex_data.h
cpp/applications/test_app/: CMakeLists.txt  another_file.cpp  main.cpp  test_basic.cpp  test_basic.h  test_new_elements.cpp  test_utils.h
cpp/applications/test_app_c/: CMakeLists.txt  main.c
cpp/cmake/: linux.cmake  mac.cmake  macos.cmake
cpp/communication/: received_data.h  udp_server.h
cpp/dvs/: CMakeLists.txt  base_types.h  dvs.h  enumerations.h  function_header.h  low_level_com.h  plot_attributes.h  plot_tool.h  utils.h
cpp/dvs/math/: coordinates.h  geometry.h  image.h  math.h  math_core.h  structures.h  transformations.h
cpp/dvs/test/: test_attributes.cpp  test_function_header.cpp  test_matrix_view.cpp  test_new.cpp  test_transmission.cpp
cpp/main_application/: CMakeLists.txt  background_panel.h  cache_reader.h  constants.h  custom_button.h  events.cpp  events.h  filesystem_include.h  globals.h  gui_element.h  layout_tools_window.cpp  layout_tools_window.h  main.cpp  main_window.cpp  main_window.h  main_window_gui.cpp  main_window_receive.cpp  opengl_debug.cpp  plot_data.cpp  plot_data.h  plot_window_gl_pane.cpp  plot_window_gl_pane.h  project_file.h  project_file_parser.h  project_settings.h  properties.h  prototype_view.cpp  prototype_view.h  save_manager.h  settings_reader.h  shader.cpp  shader.h  tab_view.cpp  tab_view.h  tray_icon.cpp  tray_icon.h  view_base.h  window_view.cpp  window_view.h
cpp/main_application/axes/: axes.h  axes_interactor.cpp  axes_interactor.h  axes_painter.cpp  axes_painter.h  axes_renderer.cpp  axes_renderer.h  grid_numbers.cpp  grid_numbers.h  legend_properties.h  legend_renderer.cpp  legend_renderer.h  plot_box_grid.cpp  plot_box_grid.h  plot_box_silhouette.h  plot_box_walls.cpp  plot_box_walls.h  text_rendering.cpp  text_rendering.h  vao_object.h  zoom_rect.cpp  zoom_rect.h
cpp/main_application/communication/: received_data.h  udp_server.h
cpp/main_application/io_devices/: keyboard_state.cpp  mouse_state.cpp  mouse_state.h
cpp/main_application/misc/: color_map.cpp  color_map.h  number_formatting.cpp
cpp/main_application/old/: axes_painter.h  coordinate_converter.cpp  coordinate_converter.h  opengl_2d_shape_primitives.h  opengl_text.cpp
cpp/main_application/opengl_low_level/: data_structures.h  opengl_header.h  opengl_low_level.h  opengl_text.cpp  opengl_text.h
cpp/main_application/plot_functions/: plot_functions.cpp  plot_functions.h
cpp/main_application/plot_objects/: draw_arrow.h  draw_line3d.h  draw_line_between_points_3d.h  draw_mesh.h  draw_plane_xy.h  draw_plane_xz.h  draw_plane_yz.h  draw_polygon_4_points.h  draw_tiles.h  draw_triangle_3d.h  draw_triangles_3d.h  im_show.h  img_shader.fragment  plot2_collection.h  plot2d.h  plot3d.h  plot_object_base.h  plot_objects.h  quiver.h  scatter.h  scatter3.h  stairs.h  surf.h  tri.vertex  utils.h
cpp/main_application/project_state/: cache_reader.h  project_settings.h  save_manager.h  settings_reader.h
cpp/test/interface_test/: CMakeLists.txt  test_interface_functions.cpp
cpp/test/test/: test_function_header.cpp  test_new.cpp  test_transmission.cpp
cpp/test_applications/advanced_tests_cpp/: code.cpp
cpp/test_applications/basic_tests_c/: main.c  tests.h
cpp/test_applications/basic_tests_cpp/: main.cpp  tests.h
src/applications/gui_testing/: CMakeLists.txt  button.cpp  button.h  checkbox.cpp  checkbox.h  constants.h  gui_element.cpp  gui_element.h  gui_pane.cpp  gui_pane.h  gui_pane_events.cpp  main_window.cpp  main_window.h  opengl_primitives.cpp  rgbtriplet.h  (+5 more)
src/demos/: CMakeLists.txt  args.h  main.cpp  static_tests_print_screen.py  tests.h
src/main_application/: CMakeLists.txt  Info.plist.in  background_renderer.cpp  background_renderer.h  buffered_writer.h  close_button.cpp  close_button.h  cmdl_output_window.cpp  cmdl_output_window.h  color.h  color_picker.cpp  color_picker.h  constants.h  custom_button.h  editing_silhouette.cpp  editing_silhouette.h  events.cpp  events.h  filesystem.h  globals.cpp  globals.h  graphic_window.cpp  graphic_window.h  gui_element.cpp  gui_element.h  gui_element_state.h  gui_elements.cpp  gui_elements.h  gui_tab.cpp  gui_tab.h  gui_window.cpp  gui_window.h  help_pane.cpp  help_pane.h  input_data.cpp  input_data.h  layout_tools_window.cpp  layout_tools_window.h  main.cpp  main_window copy.h  (+46 more)
src/system_test/: CMakeLists.txt  main.cpp  utils.h
src/test/: CMakeLists.txt
tv/fd/: CMakeLists.txt  TODO  logging_api_usage_example.cpp
tv/open-bldc-csim/: .gitignore  .gitmodules  CMakeLists.txt  plot_data.py
tv/pp/: CMakeLists.txt  main.cpp  rrt.h  utils.h
(+1382 files in other folders)
